Repositioned related artists, recent searches, fixed spacing.

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -71,10 +71,13 @@ padding-bottom: 15px;
  
 }
 
-.recent_search {
-  float: right;
-  margin-right: 95px;
-  padding: 10px;
+.recent_search_holder {
+  float: bottom;
+  position: relative;
+  height: 85px;
+  width: 250px;
+  padding: 15px 0 15px 15px;
+  overflow: hidden;
 }
 
 
